Fix blog post images and improve layout

--- a/src/app/blog/posts/hackathon-clean.mdx
+++ b/src/app/blog/posts/hackathon-clean.mdx
@@ -1,13 +1,8 @@
 ---
 title: "Strategic Research for the Baseline Tooling Hackathon"
 publishedAt: "2025-09-12"
-category: "Tech"
+category: "tech"
 summary: "My approach to Google's Baseline Tooling Hackathon: systematic research, competitive analysis, and a structured 25-day build plan focused on developer impact."
-images:
-  - src: "/images/blog/baseline-hackathon-research.jpg"
-    alt: "Code editor showing Baseline integration research with multiple browser windows"
-    width: 1200
-    height: 630
 ---
 
 # Strategic Research for the Baseline Tooling Hackathon
