--- a/src/app/blog/posts/microservices-go-kubernetes.mdx
+++ b/src/app/blog/posts/microservices-go-kubernetes.mdx
@@ -4,7 +4,7 @@ publishedAt: "2024-12-15"
 category: "tech"
 summary: "Exploring patterns for building fault-tolerant microservices using Go, Docker, and Kubernetes orchestration."
 images:
-  - src: "/images/blog/microservices-go.jpg"
+  - src: "/images/blog/go.jpg"
     alt: "Go microservices architecture diagram"
     width: 1200
     height: 630
