Format poem with proper line breaks

--- a/src/app/blog/posts/corpse.mdx
+++ b/src/app/blog/posts/corpse.mdx
@@ -7,44 +7,44 @@ summary: "A reflection on dreams, death, and the unfairness of existence."
 
 # corpse
 
-i don't know why sleeping is difficult
-at least i get to dream of you
-maybe because it's all a dream
-and i don't want to wake up
-so i just don't sleep
-thinking of you
+i don't know why sleeping is difficult<br />
+at least i get to dream of you<br />
+maybe because it's all a dream<br />
+and i don't want to wake up<br />
+so i just don't sleep<br />
+thinking of you<br />
 
-sometimes i go to see the burning corpses
-just to see that they're burning alone
-sometimes no one to cry for them
+sometimes i go to see the burning corpses<br />
+just to see that they're burning alone<br />
+sometimes no one to cry for them<br />
 
-are they dreaming too?
-or pretending to sleep?
-a nightmare for someone, somewhere
-who still loves them
-but couldn't gather up to show up
-to see them burn
+are they dreaming too?<br />
+or pretending to sleep?<br />
+a nightmare for someone, somewhere<br />
+who still loves them<br />
+but couldn't gather up to show up<br />
+to see them burn<br />
 
-but at least i'm alive
-does that make it better?
-no.
-i don't know.
+but at least i'm alive<br />
+does that make it better?<br />
+no.<br />
+i don't know.<br />
 
-who gets to decide, who gets to live and who does not?
-who gets to live with love, who dies alone
-who gets to dream something beautiful
-and who gets to live it
-the world isn't fair
+who gets to decide, who gets to live and who does not?<br />
+who gets to live with love, who dies alone<br />
+who gets to dream something beautiful<br />
+and who gets to live it<br />
+the world isn't fair<br />
 
-so i don't wanna dream
-and I don't wanna sleep
-so i spiral around
-thinking about you
-like a geometric progression
+so i don't wanna dream<br />
+and I don't wanna sleep<br />
+so i spiral around<br />
+thinking about you<br />
+like a geometric progression<br />
 
-going on
-until infinity
-and I accept it
-because
-i don't get to decide
+going on<br />
+until infinity<br />
+and I accept it<br />
+because<br />
+i don't get to decide<br />
 only if I could.
