--- a/src/app/blog/posts/corpse.mdx
+++ b/src/app/blog/posts/corpse.mdx
@@ -3,6 +3,11 @@ title: "corpse"
 publishedAt: "2025-10-06"
 category: "poetry"
 summary: "A reflection on dreams, death, and the unfairness of existence."
+images:
+  - src: "/images/blog/corpse.png"
+    alt: "corpse cover art"
+    width: 1200
+    height: 630
 ---
 
 # corpse
